<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Programação</string>
    <string name="section_participacao">Participação</string>
    <string name="section_apoio">Apoio</string>
    <string name="section_estudo_biblico">Estudo Bíblico</string>
    <string name="section_escola">Escola</string>
    <string name="section_servico">Serviço</string>
    <string name="section_discurso">Discurso Público</string>
    <string name="section_estudo_sentinela">A Sentinela</string>
    <string name="section_cadastrar">Cadastrar pessoas</string>
    <string name="section_criar_programacao">Criar programação</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lbl_date_target">Data em&#8230;</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_limpeza">Limpeza</string>
    <string name="lbl_indicador">Indicador</string>
    <string name="lbl_som">Som</string>
    <string name="lbl_palco">Palco</string>
    <string name="lbl_volante">Volante</string>
    <string name="lbl_dirigente">Dirigente</string>
    <string name="lbl_leitor">Leitor</string>
    <string name="lbl_oracao_final">Oração final</string>
    <string name="lbl_orador">Orador</string>
    <string name="lbl_congregacao">Congregação</string>
    <string name="lbl_presidente">Presidente</string>
    <string name="lbl_cadastrar_pessoa">Cadastrar pessoa</string>
    <string name="lbl_nome">Nome</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="select_prompt">Selecione alguém&#8230;</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>

</resources>